2014-07-22  Brent Fulgham  <bfulgham@apple.com>

        [Win] Build fix for EWS bots.

        * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp: Forward declare
        structure definition.

2014-07-22  Brent Fulgham  <bfulgham@apple.com>

        [Win] Fix Crash when handling Legible Output callbacks
        https://bugs.webkit.org/show_bug.cgi?id=134946

        Reviewed by Dean Jackson.

        Relanding after adding fixes to support build bots.

        * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp:
        (WebCore::InbandTextTrackPrivateAVF::processNativeSamples): Remove
        Windows-specific 'ASSERT_NOT_REACHED' code path.
        * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
        (WebCore::createLegibleOutputSubtypes): Added.
        (WebCore::AVFWrapper::createPlayerItem): Updated to request native
        samples from AVFoundationCF.

2014-07-16  Myles C. Maxfield  <mmaxfield@apple.com>

        Copying and pasting trivial H2 content causes a crash in firstPositionInNode
        https://bugs.webkit.org/show_bug.cgi?id=134897

        Reviewed by Ryosuke Niwa.

        ReplaceSelectionCommand::makeInsertedContentRoundTrippableWithHTMLTreeBuilder() attempts
        to move pasted headings out of existed headings, with out regard to if the existing
        heading is the contenteditable root.

        Test: editing/pasteboard/heading-crash.html

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::makeInsertedContentRoundTrippableWithHTMLTreeBuilder):

2014-07-22  Ryuan Choi  <ryuan.choi@samsung.com>

        Remove dead APIs from TiledBackingStore
        https://bugs.webkit.org/show_bug.cgi?id=135158

        Reviewed by Gyuyoung Kim.

        setContentsFrozen and related code of TiledBackingStore are not used since Qt port is removed.

        * platform/graphics/TiledBackingStore.cpp:
        (WebCore::TiledBackingStore::TiledBackingStore):